--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <tittle>To-Do List App - Easy Tutorials</tittle>
+        <title>To-Do List</title>
         <link rel="stylesheet" href="style.css">
         </head>
         <body>
